Dependency on numpy

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,12 +12,13 @@ source:
     sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
 
 requirements:
   run:
     - xtensor >=0.10.2,<0.11
     - pybind11 >=2.1.0,<2.2
+    - numpy
 
 test:
   commands:
