--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xtensor-python" %}
-{% set version = "0.12.2" %}
-{% set sha256 = "768b3bacb1e0e9529fe5d10939e1a7b5baa5742b580b8ed613f59f6649f5e433" %}
+{% set version = "0.12.3" %}
+{% set sha256 = "271b38d8ca16636e056a6877724ef2dc53ea8e7dde9531de0874ca8a797dfd85" %}
 
 package:
   name: {{ name|lower }}
@@ -15,6 +15,9 @@ build:
   number: 0
 
 requirements:
+  build:
+    - toolchain
+    - cmake
   run:
     - xtensor >=0.10.2,<0.11
     - pybind11 >=2.1.0,<2.2
@@ -24,7 +27,11 @@ test:
   commands:
     - test -d ${PREFIX}/include/xtensor-python  # [unix]
     - test -f ${PREFIX}/include/xtensor-python/pyarray.hpp  # [unix]
-    - if exist %PREFIX%\include\xtensor-python\pyarray.hpp (exit 0) else (exit 1)  # [win]
+    - test -f ${PREFIX}/lib/cmake/xtensor-python/xtensor-pythonConfig.cmake  # [unix]
+    - test -f ${PREFIX}/lib/cmake/xtensor-python/xtensor-pythonConfigVersion.cmake  # [unix]
+    - if exist %LIBRARY_PREFIX%\include\xtensor-python\pyarray.hpp (exit 0) else (exit 1)  # [win]
+    - if exist %LIBRARY_PREFIX%\lib\cmake\xtensor-pythonConfig.cmake (exit 0) else (exit 1)  # [win]
+    - if exist %LIBRARY_PREFIX%\lib\cmake\xtensor-pythonConfigVersion.cmake (exit 0) else (exit 1)  # [win]
 
 about:
   home: http://quantstack.net/xtensor
