--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ build:
   skip: True  # [win and vc<14]
 
 requirements:
-  build:
+  host:
     - {{ compiler('cxx') }}
     - cmake
     - xtl
@@ -35,10 +35,9 @@ test:
     - test -f ${PREFIX}/include/xtensor-python/pyarray.hpp  # [unix]
     - test -f ${PREFIX}/lib/cmake/xtensor-python/xtensor-pythonConfig.cmake  # [unix]
     - test -f ${PREFIX}/lib/cmake/xtensor-python/xtensor-pythonConfigVersion.cmake  # [unix]
-    # TODO: replace with %PREFIX%\Library with %LIBRARY_PREFIX%
-    - if exist %PREFIX%\Library\include\xtensor-python\pyarray.hpp (exit 0) else (exit 1)  # [win]
-    - if exist %PREFIX%\Library\lib\cmake\xtensor-pythonConfig.cmake (exit 0) else (exit 1)  # [win]
-    - if exist %PREFIX%\Library\lib\cmake\xtensor-pythonConfigVersion.cmake (exit 0) else (exit 1)  # [win]
+    - if exist %LIBRARY_PREFIX%\include\xtensor-python\pyarray.hpp (exit 0) else (exit 1)  # [win]
+    - if exist %LIBRARY_PREFIX%\lib\cmake\xtensor-pythonConfig.cmake (exit 0) else (exit 1)  # [win]
+    - if exist %LIBRARY_PREFIX%\lib\cmake\xtensor-pythonConfigVersion.cmake (exit 0) else (exit 1)  # [win]
 
 about:
   home: http://quantstack.net/xtensor
