--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -1,11 +1,9 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
-build_number_decrement:
-- '0'
 channel_sources:
-- conda-forge/label/gcc7,defaults
+- conda-forge,defaults
 channel_targets:
-- conda-forge gcc7
+- conda-forge main
 cxx_compiler:
 - clangxx
 macos_machine:
@@ -14,8 +12,3 @@ macos_min_version:
 - '10.9'
 numpy:
 - '1.9'
-zip_keys:
-- - cxx_compiler
-  - channel_sources
-  - channel_targets
-  - build_number_decrement
