--- a/.ci_support/osx_.yaml
+++ b/.ci_support/osx_.yaml
@@ -6,9 +6,15 @@ channel_targets:
 - conda-forge main
 cxx_compiler:
 - clangxx
+cxx_compiler_version:
+- '4'
 macos_machine:
 - x86_64-apple-darwin13.4.0
 macos_min_version:
 - '10.9'
 numpy:
 - '1.9'
+pin_run_as_build:
+  numpy:
+    min_pin: x.x
+    max_pin: x.x
