--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "xtensor-python" %}
-{% set version = "0.22.1" %}
-{% set sha256 = "b92ce8979d54bd88e3613920208a13046f5944df6ada38711f4a89636c55304d" %}
+{% set version = "0.23.0" %}
+{% set sha256 = "9c0e9b326396ad1a656ba5f3f28043f66c1dc291876befba1b64f43947446bf4" %}
 
 package:
   name: {{ name|lower }}
@@ -20,15 +20,15 @@ requirements:
     - {{ compiler('cxx') }}
     - cmake
   host:
-    - xtl >=0.5.1,<0.6
-    - xtensor >=0.19.0,<0.20
+    - xtl >=0.6.2,<0.7
+    - xtensor >=0.20.4,<0.21
     - pybind11 >=2.1.0,<2.3
     - numpy
   run:
-    - xtl >=0.5.1,<0.6
-    - xtensor >=0.19.0,<0.20
-    - pybind11 >=2.1.0,<2.3
-    - numpy
+    - {{ pin_compatible('xtl', max_pin='x.x') }}
+    - {{ pin_compatible('xtensor', max_pin='x.x') }}
+    - {{ pin_compatible('pybind11', max_pin='x.x') }}
+    - {{ pin_compatible('numpy', max_pin='x.x') }}
 
 test:
   commands:
