--- a/.ci_support/win_cxx_compilervs2015python3.7vc14.yaml
+++ b/.ci_support/win_cxx_compilervs2015python3.7vc14.yaml
@@ -7,10 +7,16 @@ cxx_compiler:
 numpy:
 - '1.14'
 pin_run_as_build:
+  python:
+    min_pin: x.x
+    max_pin: x.x
   vc:
     max_pin: x
+python:
+- '3.7'
 vc:
 - '14'
 zip_keys:
-- - vc
+- - python
+  - vc
   - cxx_compiler
