--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,7 +24,9 @@ requirements:
     - xtensor >=0.20.4,<0.21
     - pybind11 >=2.1.0,<2.5
     - numpy
+    - python
   run:
+    - python
     - {{ pin_compatible('xtl', max_pin='x.x') }}
     - {{ pin_compatible('xtensor', max_pin='x.x') }}
     - {{ pin_compatible('pybind11', max_pin='x.x') }}
