--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,7 +12,7 @@ source:
     sha256: {{ sha256 }}
 
 build:
-  number: 2
+  number: 3
   skip: True  # [win and vc<14]
 
 requirements:
@@ -20,11 +20,13 @@ requirements:
     - {{ compiler('cxx') }}
     - cmake
   host:
+    - python
     - xtl >=0.6.2,<0.7
     - xtensor >=0.20.4,<0.21
     - pybind11 >=2.1.0,<2.5
     - numpy
   run:
+    - python
     - {{ pin_compatible('xtl', max_pin='x.x') }}
     - {{ pin_compatible('xtensor', max_pin='x.x') }}
     - {{ pin_compatible('pybind11', max_pin='x.x') }}
