--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -8,11 +8,11 @@ package:
 
 source:
     fn: {{ name }}-{{ version }}.tar.gz
-    url: https://github.com/QuantStack/xtensor-python/archive/{{ version }}.tar.gz
+    url: https://github.com/xtensor-stack/xtensor-python/archive/{{ version }}.tar.gz
     sha256: {{ sha256 }}
 
 build:
-  number: 0
+  number: 1
   skip: True  # [win and vc<14]
 
 requirements:
@@ -47,14 +47,14 @@ test:
     - if exist %LIBRARY_PREFIX%\lib\cmake\xtensor-pythonConfigVersion.cmake (exit 0) else (exit 1)  # [win]
 
 about:
-  home: http://quantstack.net/xtensor
+  home: https://github.com/xtensor-stack/xtensor-python
   license: BSD-3-Clause
   license_family: BSD
   license_file: LICENSE
   summary: 'Python bindings for xtensor, the C++ tensor algebra library'
   description: 'Multi dimensional arrays with broadcasting and lazy computing'
-  doc_url: http://xtensor.readthedocs.io
-  dev_url: https://github.com/QuantStack/xtensor-python
+  doc_url: https://xtensor-python.readthedocs.io
+  dev_url: https://github.com/xtensor-stack/xtensor-python
 
 extra:
   recipe-maintainers:
