--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,5 @@
 {% set name = "xtensor-python" %}
-{% set version = "0.26.1" %}
-{% set sha256 = "eb64155c6824be471decf93927beedae3645714c8ce92f38e037434db2c2454a" %}
+{% set version = "0.27.0" %}
 
 package:
   name: {{ name|lower }}
@@ -9,10 +8,10 @@ package:
 source:
     fn: {{ name }}-{{ version }}.tar.gz
     url: https://github.com/xtensor-stack/xtensor-python/archive/{{ version }}.tar.gz
-    sha256: {{ sha256 }}
+    sha256: 40ee01bd213aeb7bf64f6d8a3257f4fa98ed31c401596c6c7b3b115f61a473b9
 
 build:
-  number: 2
+  number: 0
   skip: True  # [win and vc<14]
 
 requirements:
@@ -27,8 +26,8 @@ requirements:
   host:
     - python
     - xtl >=0.7,<0.8
-    - xtensor >=0.24.0,<0.25
-    - pybind11 >=2.4.3,<3
+    - xtensor >=0.25.0,<0.26
+    - pybind11 >=2.6.1,<3
     - numpy
   run:
     - python
