--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
     sha256: 3be09f2bc284e5a468937ad411a9976f9ab7ea5d0df40f5b1964a3694e7ee931
 
 build:
-  number: 0
+  number: 1
   skip: True  # [win and vc<14]
 
 requirements:
@@ -19,7 +19,7 @@ requirements:
     - python                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
     - numpy                                  # [build_platform != target_platform]
-    - pybind11 >=2.12.0,<3                   # [build_platform != target_platform]
+    - pybind11                               # [build_platform != target_platform]
     - {{ compiler("cxx") }}
     - {{ stdlib("c") }}
     - cmake
@@ -28,7 +28,7 @@ requirements:
     - python
     - xtl >=0.8,<0.9
     - xtensor >=0.26.0,<0.27
-    - pybind11 >=2.12.0,<3
+    - pybind11
     - numpy
   run:
     - python
